fix horizontal scroll on header component

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -118,7 +118,7 @@
     content: ' ';
     position: absolute;
     height: 50%;
-    width: 100vw;
+    width: 100%;
     background-color: var(--color-white);
     bottom: 0;
     left: 0;
